tests/snapshots/scripts/fmSyntaxColorizer/Example SyntaxColorizing - ID 46/Custom scripts - ID 174/Custom script 5 - ID 105.xml.snap
---
source: src/main.rs
expression: output_content
---
<Script>
	<ScriptReference id="105" name="Custom script 5"></ScriptReference>
	<ObjectList membercount="3">
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<Options>4</Options>
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment value="@ User: Put your own code samples here"></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
	</ObjectList>
</Script>
